--- a/blocktime8.html
+++ b/blocktime8.html
@@ -105,7 +105,7 @@
 							}
 
 							const startTime = performance.now();
-							gl.getProgramParameter(program, gl.ACTIVE_ATTRIBUTES);
+							gl.useProgram(program);
 							const endTime = performance.now();
 							resolve(endTime - startTime);
 						} else {
